# datastructures-and-algorithms-lab

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: implementation_document.md  project_specification.md  testing_document.md  user_guide.md
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: calculator.py  calculator_io.py  evaluator.py  main.py  shunting_yard.py
src/algorithms/: evaluator.py  shunting_yard.py
src/calculator/: calculator.py  calculator_io.py
src/tests/: calculator_test.py  evaluator_test.py  shunting_yard_test.py
