[tool.poetry]
name = "datastructures-and-algorithms-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "datastructures_and_algorithms_lab"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.15.10"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
